<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jp.ac.asojuku.st.neverforget2.MysizeFragment"
    >

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/title_mysize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/none" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:text="@string/neck"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:layout_width="100dp" />

            <EditText
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginLeft="20dp"
                android:inputType="number"
                android:id="@+id/editText" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal">

            <TextView
                android:text="@string/sleeve"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:layout_gravity="center_horizontal"
                />

            <EditText
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/editText2"
                android:layout_marginLeft="20dp"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal">

            <TextView
                android:text="@string/waist"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:layout_gravity="center_horizontal"
                />

            <EditText
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/editText3"
                android:layout_marginLeft="20dp"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal">

            <TextView
                android:text="@string/inside_leg"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:layout_gravity="center_horizontal"
                />

            <EditText
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/editText4"
                android:layout_marginLeft="20dp"
                android:inputType="number" />

        </LinearLayout>

    </LinearLayout>
</FrameLayout>
