<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jp.ac.asojuku.st.neverforget2.PropertyFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/title_property"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/none" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:text="@string/car_number"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:layout_width="100dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginLeft="20dp"
                android:id="@+id/editText"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal">

            <TextView
                android:text="@string/phone_number"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:layout_gravity="center_horizontal"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/editText2"
                android:layout_marginLeft="20dp"
                android:inputType="phone" />

        </LinearLayout>


    </LinearLayout>

</FrameLayout>
